Bug 363368 - Number of files in archive not updated after DeleteJobs
Summary: Number of files in archive not updated after DeleteJobs
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.04.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-21 14:23 UTC by Elvis Angelaccio
Modified: 2016-07-10 16:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2016-05-21 14:23:34 UTC
The number of files shown in the properties dialog is not updated if we delete some entry from the currently open archive.

Unfortunately, for the Archive class is not enough to just connect to the entryRemoved() signal in order to decrement the number of files. This won't work if we delete a folder, because we don't know its number of deleted children.

Reproducible: Always
Comment 1 Ragnar Thomsen 2016-07-10 16:04:13 UTC
Git commit d78e151c7d5e2d4b7e8f514c6d488e237a1f14ec by Ragnar Thomsen.
Committed on 10/07/2016 at 16:00.
Pushed by rthomsen into branch 'master'.

Add number of folders to PropertiesDialog and fix bugs

The number of folders is now also shown in PropertiesDialog. There was a
bug where number of files/folders and total uncompressed size didn't get
updated after adding/deleting files from archive. This is now fixed by
counting the files/folders and uncompressed size in
ArchiveModel::countEntriesAndSize().
FIXED-IN: 16.08.0
Differential Revision: D2130
GUI:

M  +12   -3    kerfuffle/archive_kerfuffle.cpp
M  +3    -0    kerfuffle/archive_kerfuffle.h
M  +4    -3    kerfuffle/propertiesdialog.cpp
M  +1    -1    kerfuffle/propertiesdialog.h
M  +9    -9    kerfuffle/propertiesdialog.ui
M  +50   -0    part/archivemodel.cpp
M  +11   -0    part/archivemodel.h
M  +5    -1    part/part.cpp

http://commits.kde.org/ark/d78e151c7d5e2d4b7e8f514c6d488e237a1f14ec