Add number of folders to PropertiesDialog and fix bugs

The number of folders is now also shown in PropertiesDialog. There was a
bug where number of files/folders and total uncompressed size didn't get
updated after adding/deleting files from archive. This is now fixed by
counting the files/folders and uncompressed size in
ArchiveModel::countEntriesAndSize().

BUG: 363368
FIXED-IN: 16.08.0
Differential Revision: D2130
GUI: